--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,14 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "engines": {
-  "node": "20.11.0"
-},
-
+    "node": "20.11.0"
+  },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
@@ -31,7 +30,6 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scrollable-feed": "^2.0.2",
-    "react-tsparticles": "^2.12.2",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.5",
     "tsparticles": "^3.5.0",
