--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
-REACT_APP_ADMIN_BASE_URL = http://kabutar-api.vercel.app/api/
-REACT_APP_FILE_BASE_URL = http://kabutar-api.vercel.app/
-REACT_APP_SOCKET_ENDPOINT = http://kabutar-api.vercel.app/
+REACT_APP_ADMIN_BASE_URL = https://kabutar-api.vercel.app/api/
+REACT_APP_FILE_BASE_URL = https://kabutar-api.vercel.app/
+REACT_APP_SOCKET_ENDPOINT = https://kabutar-api.vercel.app/
