--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,6 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-
   },
   "author": "Abhishek Ali",
   "license": "ISC",
@@ -18,6 +17,7 @@
     "express": "^4.19.2",
     "firebase-admin": "^12.5.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.5.3",
     "moongose": "^1.0.0",
     "multer": "^1.4.5-lts.1",
