--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -6,19 +6,23 @@
     "routes": [
       {
         "src": "/user(.*)",
-        "dest": "/index.js"
+        "dest": "/index.js",
+        "methods":["GET","POST","PUT","DELETE","PATCH","OPTIONS"]
       },
       {
         "src": "/chat(.*)",
-        "dest": "/index.js"
+        "dest": "/index.js",
+        "methods":["GET","POST","PUT","DELETE","PATCH","OPTIONS"]
       },
       {
         "src": "/message(.*)",
-        "dest": "/index.js"
+        "dest": "/index.js",
+        "methods":["GET","POST","PUT","DELETE","PATCH","OPTIONS"]
       },
       {
         "src": "/(.*)",
-        "dest": "/index.js"
+        "dest": "/index.js",
+        "methods":["GET","POST","PUT","DELETE","PATCH","OPTIONS"]
       }
     ]
   }
