--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,5 +1,9 @@
 {
     "version": 2,
+    "functions": {
+        "index.js": {
+            "maxDuration": 60 
+      },
     "builds": [
       { "src": "index.js", "use": "@vercel/node" }
     ],
