--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -2,9 +2,9 @@
     "version": 2,
     "functions": {
         "index.js": {
-            "maxDuration": 60 
-      }
-    },
+            "maxDuration": 60 // Increase to 60 seconds
+        }
+      },
     "builds": [
       { "src": "index.js", "use": "@vercel/node" }
     ],
@@ -31,6 +31,5 @@
       }
     ]
   }
-
   
   
