--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "functions": {
         "index.js": {
-            "maxDuration": 60 // Increase to 60 seconds
+            "maxDuration": 60 
         }
       },
     "builds": [
