--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,31 +1,34 @@
 {
-    "version": 2,
-    
-    "builds": [
-      { "src": "index.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-      {
-        "src": "/user(.*)",
-        "dest": "/index.js",
-        "methods":["GET","POST","PUT","DELETE","PATCH","OPTIONS"]
-      },
-      {
-        "src": "/chat(.*)",
-        "dest": "/index.js",
-        "methods":["GET","POST","PUT","DELETE","PATCH","OPTIONS"]
-      },
-      {
-        "src": "/message(.*)",
-        "dest": "/index.js",
-        "methods":["GET","POST","PUT","DELETE","PATCH","OPTIONS"]
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/index.js",
-        "methods":["GET","POST","PUT","DELETE","PATCH","OPTIONS"]
+  "version": 2,
+  "functions": {
+      "index.js": {
+          "maxDuration": 60 
       }
-    ]
-  }
-  
-  
+  },
+  "builds": [
+      { "src": "index.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+      {
+          "src": "/user(.*)",
+          "dest": "/index.js",
+          "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
+      },
+      {
+          "src": "/chat(.*)",
+          "dest": "/index.js",
+          "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
+      },
+      {
+          "src": "/message(.*)",
+          "dest": "/index.js",
+          "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
+      },
+      {
+          "src": "/(.*)",
+          "dest": "/index.js",
+          "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
+      }
+  ]
+}
+
