changes for deploy on render in frontend3

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,3 @@
-https://kabutar-chataap-backend.onrender.com
+REACT_APP_ADMIN_BASE_URL = https://kabutar-chataap-backend.onrender.com
+REACT_APP_FILE_BASE_URL = https://kabutar-chataap-backend.onrender.com
+REACT_APP_SOCKET_ENDPOINT = https://kabutar-chataap-backend.onrender.com
