--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -2,6 +2,6 @@
 # REACT_APP_FILE_BASE_URL = http://192.168.56.1:8000/
 # REACT_APP_SOCKET_ENDPOINT = http://192.168.56.1:8000/
 
-REACT_APP_ADMIN_BASE_URL = https://kabutar-chataap-backend.onrender.com/api/
+REACT_APP_ADMIN_BASE_URL = https://kabutar-chataap-backend.onrender.com
 REACT_APP_FILE_BASE_URL = https://kabutar-chataap-backend.onrender.com
 REACT_APP_SOCKET_ENDPOINT = https://kabutar-chataap-backend.onrender.com
