--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.13.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.4",
+    "emoji-picker-react": "^4.12.0",
     "firebase": "^10.13.1",
     "framer-motion": "^11.3.28",
     "lottie-web": "^5.12.2",
