--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "moongose": "^1.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
+    "qrcode": "^1.5.4",
     "socket.io": "^4.7.5"
   }
 }
