--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,10 @@
     "firebase": "^10.13.1",
     "framer-motion": "^11.3.28",
     "lottie-web": "^5.12.2",
+    "pintura": "^0.3.10",
+    "rc-menu": "^9.15.1",
     "react": "^18.3.1",
+    "react-avatar-editor": "^13.0.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-infinite-scroll-component": "^6.1.0",
